downgrade tsp compiler for code generation

--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
@@ -20,8 +20,8 @@
       {
         "name": "Endpoint",
         "in": "path",
-        "description": "Supported Cognitive Services endpoint (e.g., https://<resource-name>.api.cognitiveservices.azure.com).",
         "required": true,
+        "description": "Supported Cognitive Services endpoint (e.g., https://<resource-name>.api.cognitiveservices.azure.com).",
         "type": "string"
       }
     ]
@@ -77,8 +77,8 @@
             },
             "headers": {
               "x-ms-error-code": {
-                "type": "string",
-                "description": "String error code indicating what went wrong."
+                "description": "String error code indicating what went wrong.",
+                "type": "string"
               }
             }
           }
@@ -121,8 +121,8 @@
             },
             "headers": {
               "x-ms-error-code": {
-                "type": "string",
-                "description": "String error code indicating what went wrong."
+                "description": "String error code indicating what went wrong.",
+                "type": "string"
               }
             }
           }
@@ -167,8 +167,8 @@
             },
             "headers": {
               "x-ms-error-code": {
-                "type": "string",
-                "description": "String error code indicating what went wrong."
+                "description": "String error code indicating what went wrong.",
+                "type": "string"
               }
             }
           }
@@ -177,7 +177,7 @@
     },
     "/language/analyze-conversations/jobs/{jobId}:cancel": {
       "delete": {
-        "operationId": "AnalyzeConversation_Cancel",
+        "operationId": "AnalyzeConversation_CancelJob",
         "summary": "Cancel a long-running Text Analysis conversations job",
         "description": "Cancel a long-running job for text analysis of conversations.",
         "parameters": [
@@ -232,8 +232,8 @@
             },
             "headers": {
               "x-ms-error-code": {
-                "type": "string",
-                "description": "String error code indicating what went wrong."
+                "description": "String error code indicating what went wrong.",
+                "type": "string"
               }
             }
           }
@@ -1307,16 +1307,18 @@
         "id",
         "participantId"
       ],
+      "additionalProperties": true,
       "allOf": [
         {
           "type": "object",
-          "additionalProperties": {}
+          "additionalProperties": true
         }
       ]
     },
     "ConversationItemLevelTiming": {
       "type": "object",
       "description": "Audio timing at the conversation item level.",
+      "properties": {},
       "allOf": [
         {
           "$ref": "#/definitions/AudioTiming"
@@ -2389,10 +2391,11 @@
         "code",
         "message"
       ],
+      "additionalProperties": true,
       "allOf": [
         {
           "type": "object",
-          "additionalProperties": {}
+          "additionalProperties": true
         }
       ]
     },
@@ -2753,10 +2756,11 @@
       "required": [
         "targetProjectKind"
       ],
+      "additionalProperties": true,
       "allOf": [
         {
           "type": "object",
-          "additionalProperties": {}
+          "additionalProperties": true
         }
       ]
     },
@@ -2767,7 +2771,7 @@
         "result": {
           "type": "object",
           "description": "The actual response from a LUIS Generally Available application.",
-          "additionalProperties": {}
+          "additionalProperties": true
         }
       },
       "allOf": [
@@ -4035,7 +4039,8 @@
     },
     "object": {
       "type": "object",
-      "description": "Represent a model"
+      "description": "Represent a model",
+      "properties": {}
     },
     "projectKind": {
       "type": "string",
