testing redactioncharacter enum

--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
@@ -2660,20 +2660,8 @@
       "type": "string",
       "description": "Optional parameter to use a Custom Character to be used for redaction in PII responses. Default character will be * as before. We allow specific ascii characters for redaction.",
       "enum": [
-        "!",
-        "#",
-        "$",
-        "%",
-        "&",
-        "*",
-        "+",
-        "-",
-        "=",
-        "?",
-        "@",
-        "^",
-        "_",
-        "~"
+        "redactionCharacter",
+        "redactChar"
       ],
       "x-ms-enum": {
         "name": "RedactionCharacter",
