--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
@@ -1958,8 +1958,9 @@
           "description": "Source of QnA result."
         },
         "metadata": {
-          "$ref": "#/definitions/object",
-          "description": "Metadata associated with the answer, useful to categorize or filter question answers."
+          "type": "object",
+          "description": "Metadata associated with the answer, useful to categorize or filter question answers.",
+          "additionalProperties": true
         },
         "dialog": {
           "$ref": "#/definitions/KnowledgeBaseAnswerDialog",
@@ -3466,11 +3467,6 @@
         "name": "extraInformationKind",
         "modelAsString": true
       }
-    },
-    "object": {
-      "type": "object",
-      "description": "Represent a model",
-      "properties": {}
     },
     "projectKind": {
       "type": "string",
