--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
@@ -20,8 +20,8 @@
       {
         "name": "Endpoint",
         "in": "path",
-        "required": true,
         "description": "Supported Cognitive Services endpoint (e.g., https://<resource-name>.api.cognitiveservices.azure.com).",
+        "required": true,
         "type": "string"
       }
     ]
@@ -77,8 +77,8 @@
             },
             "headers": {
               "x-ms-error-code": {
-                "description": "String error code indicating what went wrong.",
-                "type": "string"
+                "type": "string",
+                "description": "String error code indicating what went wrong."
               }
             }
           }
@@ -121,8 +121,8 @@
             },
             "headers": {
               "x-ms-error-code": {
-                "description": "String error code indicating what went wrong.",
-                "type": "string"
+                "type": "string",
+                "description": "String error code indicating what went wrong."
               }
             }
           }
@@ -167,8 +167,8 @@
             },
             "headers": {
               "x-ms-error-code": {
-                "description": "String error code indicating what went wrong.",
-                "type": "string"
+                "type": "string",
+                "description": "String error code indicating what went wrong."
               }
             }
           }
@@ -232,8 +232,8 @@
             },
             "headers": {
               "x-ms-error-code": {
-                "description": "String error code indicating what went wrong.",
-                "type": "string"
+                "type": "string",
+                "description": "String error code indicating what went wrong."
               }
             }
           }
@@ -658,11 +658,8 @@
       "description": "The base class of a conversation input task.",
       "properties": {
         "kind": {
-          "type": "string",
+          "$ref": "#/definitions/AnalyzeConversationTaskKind",
           "description": "The base class of a conversation input task.",
-          "enum": [
-            "Conversation"
-          ],
           "x-ms-mutability": [
             "read",
             "create"
@@ -1271,18 +1268,16 @@
         "id",
         "participantId"
       ],
-      "additionalProperties": true,
       "allOf": [
         {
           "type": "object",
-          "additionalProperties": true
+          "additionalProperties": {}
         }
       ]
     },
     "ConversationItemLevelTiming": {
       "type": "object",
       "description": "Audio timing at the conversation item level.",
-      "properties": {},
       "allOf": [
         {
           "$ref": "#/definitions/AudioTiming"
@@ -2319,11 +2314,10 @@
         "code",
         "message"
       ],
-      "additionalProperties": true,
       "allOf": [
         {
           "type": "object",
-          "additionalProperties": true
+          "additionalProperties": {}
         }
       ]
     },
@@ -2472,7 +2466,7 @@
         "metadata": {
           "type": "object",
           "description": "Metadata associated with the answer, useful to categorize or filter question answers.",
-          "additionalProperties": true
+          "additionalProperties": {}
         },
         "dialog": {
           "$ref": "#/definitions/KnowledgeBaseAnswerDialog",
@@ -2685,11 +2679,10 @@
       "required": [
         "targetProjectKind"
       ],
-      "additionalProperties": true,
       "allOf": [
         {
           "type": "object",
-          "additionalProperties": true
+          "additionalProperties": {}
         }
       ]
     },
@@ -2700,7 +2693,7 @@
         "result": {
           "type": "object",
           "description": "The actual response from a LUIS Generally Available application.",
-          "additionalProperties": true
+          "additionalProperties": {}
         }
       },
       "allOf": [
