--- a/specification/cognitiveservices/data-plane/Language/stable/2022-05-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2022-05-01/analyzeconversations.json
@@ -20,8 +20,8 @@
       {
         "name": "Endpoint",
         "in": "path",
-        "required": true,
         "description": "Supported Cognitive Services endpoint (e.g., https://<resource-name>.api.cognitiveservices.azure.com).",
+        "required": true,
         "type": "string"
       }
     ]
@@ -77,8 +77,8 @@
             },
             "headers": {
               "x-ms-error-code": {
-                "description": "String error code indicating what went wrong.",
-                "type": "string"
+                "type": "string",
+                "description": "String error code indicating what went wrong."
               }
             }
           }
@@ -194,11 +194,8 @@
       "description": "The base class of a conversation input task.",
       "properties": {
         "kind": {
-          "type": "string",
+          "$ref": "#/definitions/AnalyzeConversationTaskKind",
           "description": "The base class of a conversation input task.",
-          "enum": [
-            "Conversation"
-          ],
           "x-ms-mutability": [
             "read",
             "create"
@@ -646,11 +643,10 @@
         "id",
         "participantId"
       ],
-      "additionalProperties": true,
       "allOf": [
         {
           "type": "object",
-          "additionalProperties": true
+          "additionalProperties": {}
         }
       ]
     },
@@ -1169,11 +1165,10 @@
         "code",
         "message"
       ],
-      "additionalProperties": true,
       "allOf": [
         {
           "type": "object",
-          "additionalProperties": true
+          "additionalProperties": {}
         }
       ]
     },
@@ -1252,7 +1247,7 @@
         "metadata": {
           "type": "object",
           "description": "Metadata associated with the answer, useful to categorize or filter question answers.",
-          "additionalProperties": true
+          "additionalProperties": {}
         },
         "dialog": {
           "$ref": "#/definitions/KnowledgeBaseAnswerDialog",
@@ -1465,11 +1460,10 @@
       "required": [
         "targetProjectKind"
       ],
-      "additionalProperties": true,
       "allOf": [
         {
           "type": "object",
-          "additionalProperties": true
+          "additionalProperties": {}
         }
       ]
     },
@@ -1480,7 +1474,7 @@
         "result": {
           "type": "object",
           "description": "The actual response from a LUIS Generally Available application.",
-          "additionalProperties": true
+          "additionalProperties": {}
         }
       },
       "allOf": [
