--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
@@ -450,6 +450,7 @@
           "description": "Analysis Input",
           "x-ms-mutability": [
             "read",
+            "update",
             "create"
           ]
         },
