--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
@@ -469,6 +469,7 @@
           "description": "Analysis Input",
           "x-ms-mutability": [
             "read",
+            "update",
             "create"
           ]
         },
