--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
@@ -466,12 +466,7 @@
         },
         "analysisInput": {
           "$ref": "#/definitions/MultiLanguageConversationAnalysisInput",
-          "description": "Analysis Input",
-          "x-ms-mutability": [
-            "read",
-            "update",
-            "create"
-          ]
+          "description": "Analysis Input"
         },
         "tasks": {
           "type": "array",
@@ -479,7 +474,11 @@
           "items": {
             "$ref": "#/definitions/AnalyzeConversationLROTask"
           },
-          "x-ms-identifiers": []
+          "x-ms-identifiers": [],
+          "x-ms-mutability": [
+            "read",
+            "create"
+          ]
         }
       },
       "required": [
