--- a/dev/cognitiveservices/data-plane/Language/analyzeconversations.json
+++ b/dev/cognitiveservices/data-plane/Language/analyzeconversations.json
@@ -2067,7 +2067,8 @@
               "issue",
               "resolution",
               "chapterTitle",
-              "narrative"
+              "narrative",
+              "recap"
             ],
             "x-ms-enum": {
               "name": "SummaryAspect",
@@ -2088,6 +2089,10 @@
                 {
                   "value": "narrative",
                   "description": "Generic narrative summary of any conversation. It generally converts the conversational language into formal written language, compresses the text length, and keeps the salient information."
+                },
+                {
+                  "value": "recap",
+                  "description": "General recap of a conversation. It generally produces a few sentences describing the key topics or developments during theconversation."
                 }
               ]
             }
