--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
@@ -87,19 +87,55 @@
     },
     "/language/analyze-conversations/jobs": {
       "post": {
-        "operationId": "AnalyzeConversationSubmitJob",
-        "description": "Analyzes the input conversation utterance.",
+        "operationId": "AnalyzeConversationSubmitJob2",
         "parameters": [
           {
-            "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
+            "name": "api-version",
+            "in": "query",
+            "description": "Analyze Conversations Service Versions",
+            "required": true,
+            "type": "string",
+            "enum": [
+              "2022-05-01",
+              "2023-04-01",
+              "2023-04-15-preview"
+            ],
+            "x-ms-enum": {
+              "name": "Versions",
+              "modelAsString": true,
+              "values": [
+                {
+                  "name": "v2022_05_01",
+                  "value": "2022-05-01",
+                  "description": "Version 2022-05-01"
+                },
+                {
+                  "name": "v2023_04_01",
+                  "value": "2023-04-01",
+                  "description": "Version 2023-04-01"
+                },
+                {
+                  "name": "v2023_04_15_preview",
+                  "value": "2023-04-15-preview",
+                  "description": "Version 2023-04-15-preview"
+                }
+              ]
+            }
           },
           {
-            "name": "resource",
+            "name": "body",
             "in": "body",
-            "description": "The resource instance.",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/AnalyzeConversationJobsInput"
+              "type": "object",
+              "properties": {
+                "analyzeConversationJobsInput": {
+                  "$ref": "#/definitions/AnalyzeConversationJobsInput"
+                }
+              },
+              "required": [
+                "analyzeConversationJobsInput"
+              ]
             }
           }
         ],
@@ -107,10 +143,10 @@
           "202": {
             "description": "The request has been accepted for processing, but processing has not yet completed.",
             "headers": {
-              "Location": {
+              "Operation-Location": {
                 "type": "string",
                 "format": "uri",
-                "description": "The location of an instance of AnalyzeConversationJobsInput"
+                "description": "The location of an instance of ResourceOperationStatus"
               }
             }
           },
@@ -126,31 +162,59 @@
               }
             }
           }
-        }
+        },
+        "x-ms-long-running-operation": true
       }
     },
     "/language/analyze-conversations/jobs/{jobId}": {
       "get": {
-        "operationId": "AnalyzeConversationJobStatus",
-        "summary": "Get analysis status and results",
-        "description": "Get the status of an analysis job. A job can consist of one or more tasks. After all tasks succeed, the job transitions to the succeeded state and results are available for each task.",
+        "operationId": "AnalyzeConversationJobStatus2",
         "parameters": [
-          {
-            "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
-          },
-          {
-            "name": "jobId",
-            "in": "path",
-            "description": "job ID",
-            "required": true,
-            "type": "string"
-          },
           {
             "name": "showStats",
             "in": "query",
             "description": "(Optional) if set to true, response will contain request and document level statistics.",
             "required": false,
             "type": "boolean"
+          },
+          {
+            "name": "api-version",
+            "in": "query",
+            "description": "Analyze Conversations Service Versions",
+            "required": true,
+            "type": "string",
+            "enum": [
+              "2022-05-01",
+              "2023-04-01",
+              "2023-04-15-preview"
+            ],
+            "x-ms-enum": {
+              "name": "Versions",
+              "modelAsString": true,
+              "values": [
+                {
+                  "name": "v2022_05_01",
+                  "value": "2022-05-01",
+                  "description": "Version 2022-05-01"
+                },
+                {
+                  "name": "v2023_04_01",
+                  "value": "2023-04-01",
+                  "description": "Version 2023-04-01"
+                },
+                {
+                  "name": "v2023_04_15_preview",
+                  "value": "2023-04-15-preview",
+                  "description": "Version 2023-04-15-preview"
+                }
+              ]
+            }
+          },
+          {
+            "name": "jobId",
+            "in": "path",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {
@@ -176,18 +240,45 @@
       }
     },
     "/language/analyze-conversations/jobs/{jobId}:cancel": {
-      "delete": {
-        "operationId": "AnalyzeConversationCancelJob",
-        "summary": "Cancel a long-running Text Analysis conversations job",
-        "description": "Cancel a long-running job for text analysis of conversations.",
+      "post": {
+        "operationId": "AnalyzeConversationCancelJob2",
         "parameters": [
           {
-            "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
+            "name": "api-version",
+            "in": "query",
+            "description": "Analyze Conversations Service Versions",
+            "required": true,
+            "type": "string",
+            "enum": [
+              "2022-05-01",
+              "2023-04-01",
+              "2023-04-15-preview"
+            ],
+            "x-ms-enum": {
+              "name": "Versions",
+              "modelAsString": true,
+              "values": [
+                {
+                  "name": "v2022_05_01",
+                  "value": "2022-05-01",
+                  "description": "Version 2022-05-01"
+                },
+                {
+                  "name": "v2023_04_01",
+                  "value": "2023-04-01",
+                  "description": "Version 2023-04-01"
+                },
+                {
+                  "name": "v2023_04_15_preview",
+                  "value": "2023-04-15-preview",
+                  "description": "Version 2023-04-15-preview"
+                }
+              ]
+            }
           },
           {
             "name": "jobId",
             "in": "path",
-            "description": "job ID",
             "required": true,
             "type": "string"
           }
@@ -195,33 +286,11 @@
         "responses": {
           "202": {
             "description": "The request has been accepted for processing, but processing has not yet completed.",
-            "schema": {
-              "type": "object",
-              "description": "Provides status details for long running operations.",
-              "properties": {
-                "id": {
-                  "type": "string",
-                  "description": "The unique ID of the operation."
-                },
-                "status": {
-                  "$ref": "#/definitions/Azure.Core.Foundations.OperationState",
-                  "description": "The status of the operation"
-                },
-                "error": {
-                  "$ref": "#/definitions/Azure.Core.Foundations.Error",
-                  "description": "Error object that describes the error when status is \"Failed\"."
-                }
-              },
-              "required": [
-                "id",
-                "status"
-              ]
-            },
             "headers": {
               "Operation-Location": {
                 "type": "string",
                 "format": "uri",
-                "description": "The location for monitoring the operation state."
+                "description": "The location of an instance of ResourceOperationStatus"
               }
             }
           },
@@ -387,7 +456,10 @@
         "jobId": {
           "type": "string",
           "description": "job ID",
-          "readOnly": true
+          "x-ms-mutability": [
+            "read",
+            "create"
+          ]
         },
         "lastUpdateDateTime": {
           "type": "string",
@@ -851,42 +923,6 @@
           "$ref": "#/definitions/Azure.Core.Foundations.InnerError",
           "description": "Inner error."
         }
-      }
-    },
-    "Azure.Core.Foundations.OperationState": {
-      "type": "string",
-      "description": "Enum describing allowed operation states.",
-      "enum": [
-        "InProgress",
-        "Succeeded",
-        "Failed",
-        "Canceled"
-      ],
-      "x-ms-enum": {
-        "name": "OperationState",
-        "modelAsString": true,
-        "values": [
-          {
-            "name": "InProgress",
-            "value": "InProgress",
-            "description": "The operation is in progress."
-          },
-          {
-            "name": "Succeeded",
-            "value": "Succeeded",
-            "description": "The operation has completed successfully."
-          },
-          {
-            "name": "Failed",
-            "value": "Failed",
-            "description": "The operation has failed."
-          },
-          {
-            "name": "Canceled",
-            "value": "Canceled",
-            "description": "The operation has been canceled by the user."
-          }
-        ]
       }
     },
     "BaseExtraInformation": {
@@ -1887,7 +1923,10 @@
         "jobId": {
           "type": "string",
           "description": "job ID",
-          "readOnly": true
+          "x-ms-mutability": [
+            "read",
+            "create"
+          ]
         },
         "lastUpdateDateTime": {
           "type": "string",
@@ -2848,6 +2887,9 @@
           }
         ]
       }
+    },
+    "SubmitAccepted": {
+      "type": "object"
     },
     "SummaryAspect": {
       "type": "string",
