--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
@@ -473,11 +473,7 @@
         },
         "jobId": {
           "type": "string",
-          "description": "job ID",
-          "x-ms-mutability": [
-            "read",
-            "create"
-          ]
+          "description": "job ID"
         },
         "lastUpdateDateTime": {
           "type": "string",
@@ -545,11 +541,7 @@
           "items": {
             "$ref": "#/definitions/AnalyzeConversationLROTask"
           },
-          "x-ms-identifiers": [],
-          "x-ms-mutability": [
-            "read",
-            "create"
-          ]
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -730,11 +722,7 @@
       "properties": {
         "kind": {
           "$ref": "#/definitions/AnalyzeConversationTaskKind",
-          "description": "The base class of a conversation input task.",
-          "x-ms-mutability": [
-            "read",
-            "create"
-          ]
+          "description": "The base class of a conversation input task."
         }
       },
       "discriminator": "kind",
@@ -2433,11 +2421,7 @@
         },
         "jobId": {
           "type": "string",
-          "description": "job ID",
-          "x-ms-mutability": [
-            "read",
-            "create"
-          ]
+          "description": "job ID"
         },
         "lastUpdateDateTime": {
           "type": "string",
