--- a/specification/cognitiveservices/data-plane/Language/stable/2022-05-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2022-05-01/analyzeconversations.json
@@ -195,11 +195,7 @@
       "properties": {
         "kind": {
           "$ref": "#/definitions/AnalyzeConversationTaskKind",
-          "description": "The base class of a conversation input task.",
-          "x-ms-mutability": [
-            "read",
-            "create"
-          ]
+          "description": "The base class of a conversation input task."
         }
       },
       "discriminator": "kind",
