--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
@@ -454,11 +454,7 @@
         },
         "jobId": {
           "type": "string",
-          "description": "job ID",
-          "x-ms-mutability": [
-            "read",
-            "create"
-          ]
+          "description": "job ID"
         },
         "lastUpdateDateTime": {
           "type": "string",
@@ -526,11 +522,7 @@
           "items": {
             "$ref": "#/definitions/AnalyzeConversationLROTask"
           },
-          "x-ms-identifiers": [],
-          "x-ms-mutability": [
-            "read",
-            "create"
-          ]
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -656,11 +648,7 @@
       "properties": {
         "kind": {
           "$ref": "#/definitions/AnalyzeConversationTaskKind",
-          "description": "The base class of a conversation input task.",
-          "x-ms-mutability": [
-            "read",
-            "create"
-          ]
+          "description": "The base class of a conversation input task."
         }
       },
       "discriminator": "kind",
@@ -1921,11 +1909,7 @@
         },
         "jobId": {
           "type": "string",
-          "description": "job ID",
-          "x-ms-mutability": [
-            "read",
-            "create"
-          ]
+          "description": "job ID"
         },
         "lastUpdateDateTime": {
           "type": "string",
